--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<audio controls>
-    <source src="bgm.aac" type="audio/aac">
-</audio>
+
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+	<meta charset="utf-8">
+
+	<script src="http://libs.baidu.com/jquery/2.0.1/jquery.min.js"></script>
+
+	<link rel="stylesheet" href="css/text.css">
+
+	<title>Personal website for fun</title>
+</head>
+<body>
+	<audio controls>
+        <source src="bgm.aac" type="audio/aac">
+    </audio>
+</body>
+<script src="js/getDroneVidList.js" type="text/javascript"></script>
+</html>
