--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
 <head>
 	<meta charset="utf-8">
 
-	<script src="http://libs.baidu.com/jquery/2.0.1/jquery.min.js"></script>
-
-	<link rel="stylesheet" href="css/text.css">
-
-	<title>Personal website for fun</title>
+	<title>A Present to Jin</title>
+	<audio src="bgm.aac" autoplay="autoplay">
 </head>
 <body>
-	<audio controls>
-        <source src="bgm.aac" type="audio/aac">
-    </audio>
+	<div>hello</div>
 </body>
-<script src="js/getDroneVidList.js" type="text/javascript"></script>
 </html>
