--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 	<meta charset="utf-8">
 
 	<title>A Present to Jin</title>
-	<audio src="bgm.aac" autoplay="autoplay">
+	<audio id="audio_bgm" src="bgm.aac" autoplay="autoplay"></audio>
+
+	<script type="text/javascript">
+		var num = 1;
+		var timer = setTimeout(function () {
+			console.log(num++);
+			audio_bgm.src = "lucky.aac";
+		},600000);
+	</script>
 </head>
 <body>
 	<div>hello</div>
