--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>A Present to Jin</title>
+	<title>略略略</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
