--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</svg>
 
 	<audio id="audio">
-		<source src="bgm.aac" type="audio/mpeg">
+		<source src="song/bgm0.aac" type="audio/mpeg">
 	</audio>
 
 	<div class="shadows">
